--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1",
         "midtrans/midtrans-php": "^2.6",
         "realrashid/sweet-alert": "^7.3",
         "robinvdvleuten/ulid": "^5.0",
