--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
         "midtrans/midtrans-php": "^2.6",
+        "mpdf/mpdf": "^8.2",
         "realrashid/sweet-alert": "^7.3",
         "robinvdvleuten/ulid": "^5.0",
         "spatie/laravel-permission": "^6.18"
