--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=web_kasir
+DB_DATABASE=wahi_mart
 DB_USERNAME=root
 DB_PASSWORD=
 
